# MonoRARP

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_cpp.sh  display.py  driver_models.py  embedded_risk_predictor.py  lane_detector.py  lane_marking_speed_estimator.py  launcher.py  line_detection_speed.py  multi_trackers.py  obj_det_state.cpp  obj_det_state.py  object_detector.py  out_test_1.txt  out_test_2.txt  out_test_3.txt  out_test_4.txt  out_test_5.txt  out_test_6.txt  particle_tracker.py  particle_tracker_dp.py  particle_trackers_ar.py  risk_est.py  risk_pred.cpp  risk_pred.py  risk_predictor.py  run_offline_risk_prediction.sh  run_risk_estimation.py  run_risk_estimation.sh  run_risk_prediction.py  run_risk_prediction.sh  run_webcam_obj_det.py  run_webcam_obj_det.sh  runner.py  scene.cpp  scene.h  scene.py  (+10 more)
Compile/: CMakeLists.txt
Docs/: FutureWork.md  Install.md  Offline.md  ProjectStructure.md  RunningGuide.md
driver_risk_utils/: README.md  argument_utils.py  argument_utils_test.py  defaults.py  display_utils.py  driver_model_utils.py  general_utils.py  general_utils_test.py  gps_utils.py  gps_utils_test.py  offline_utils.py  risk_prediction_utils.py  risk_prediction_utils_test.py  scene_utils.py  state_estimation_utils.py  tracker_utils.py
lane_detection_utils/: README.md  absolute_speed.py  absolute_speed_3.py  average_delta_across_marking.py  determination_of_parallelism_with_previously_tracked_lanes.py  eliminate_duplicate_road_marks.py  filtering.py  lane_args_utils.py  lane_detection_main.py  lane_signature_detection.py  long_term_average.py  merging_all_road_marks.py  outlayer_removal_and_average_brightness.py  road_sampling.py  scanning_region.py
local_utils/: README.md  average.py
object_detectors/: README.md  tensorflow_obj_det_api.py
speed_estimator_utils/: README.md  average_delta_across_marking.cpp  compilation.txt  criteria_before_sampling.cpp  current_compilation.txt  determination_of_parallelism_with_previously_tracked_lanes.cpp  display_writevideo.cpp  eliminate_duplicate_road_marks.cpp  filtering.cpp  image_reading.cpp  lane_detection.h  lane_detection_initialization.cpp  lane_signature_detection.cpp  line_detection_main_videoHwy101_only_speed_and_lane2_class.cpp  long_term_average_of_lanes.cpp  main  main.cpp  merging_all_road_marks.cpp  outlayer_removal_and_average_brightness.cpp  recording_of_currently_detected_lanes.cpp  road_sampling.cpp  scanning_region.cpp  speed_estimation.cpp  speed_estimation.h  speed_estimation_get_speed.cpp  speed_estimation_initialization.cpp  speed_estimator.cpp  (+6 more)
(+50 files in other folders)
